[gd_scene load_steps=4 format=3 uid="uid://ksk7ug7r4fwb"]

[ext_resource type="Script" path="res://modules/panels/default_timeline_panel/header/header.gd" id="1_5jv6q"]
[ext_resource type="Texture2D" uid="uid://crqa8h4hubxcc" path="res://assets/icons/default/sound_on.png" id="2_750g3"]
[ext_resource type="Texture2D" uid="uid://ds75b4h7eb4hq" path="res://assets/icons/default/visibility_on.png" id="3_nkqbt"]

[node name="Header" type="VBoxContainer"]
theme_override_constants/separation = 0
script = ExtResource("1_5jv6q")

[node name="ButtonHBox" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MuteButton" type="TextureButton" parent="ButtonHBox"]
layout_mode = 2
texture_normal = ExtResource("2_750g3")
ignore_texture_size = true
stretch_mode = 5

[node name="VisibilityButton" type="TextureButton" parent="ButtonHBox"]
layout_mode = 2
texture_normal = ExtResource("3_nkqbt")
ignore_texture_size = true
stretch_mode = 5

[node name="Line" type="HSeparator" parent="."]
layout_mode = 2
size_flags_vertical = 8
